# monika_too

./: .gitignore  Cargo.toml  README.md
commands/: lua_test.lua
migrations/2021-06-27-235423_create_config/: up.sql
monika/: Cargo.toml
monika/src/: main.rs  models.rs
monika_macros/: Cargo.toml
src/: db.rs  main.rs  schema.rs  utils.rs
src/commands/: fun.rs  mod.rs
