[package]
name = "monika_too"
version = "0.0.0"
authors = ["AnActualEmerald <kevinliger13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord = { git = "https://github.com/SpaceManiac/discord-rs" }
rune = "0.9.0"
diesel = { version = "1.4.4", features = ["sqlite"] }
dotenv = "0.15.0"