[package]
name = "monika_too"
version = "0.0.0"
authors = ["AnActualEmerald <kevinliger13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord = { git = "https://github.com/SpaceManiac/discord-rs" }
mlua = { version = "0.6.1", features = ["lua54", "serialize"] }
diesel = { version = "1.4.4", features = ["sqlite"] }
dotenv = "0.15.0"
serde = "1.0.126"