[package]
name = "monika_macros"
version = "0.0.0"
authors = ["AnActualEmerald <kevinliger13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord = { git = "https://github.com/SpaceManiac/discord-rs" }
diesel = { version = "1.4.4", features = ["sqlite"] }
dotenv = "0.15.0"
rand = "0.8.4"

[lib]
proc-macro = true
path = "src/lib.rs"